[package]
name = "rclaim"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-governor = "0.8.0"
actix-web = "4.11.0"
actix-ws = "0.3.0"
chrono = "0.4.41"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
scopeguard = "1.2.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
mockito = "1.7.0"
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
