[package]
name = "rclaim"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio-tungstenite = "0.26.2"
tower = "0.5.2"
tower_governor = "0.7.0"
chrono = "0.4.41"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = "0.4.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
] }
# scopeguard = "1.2.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = [
  "rt",
  "time",
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release.package.html5ever]
opt-level = "z"
[profile.release.package.h2]
opt-level = "z"

[dev-dependencies]
mockito = "1.7.0"
temp-env = "0.3.6"
tungstenite = "0.26.2"
